Some enhancements to stop the footer from overlapping content on the window.
If the window is resized some elements still behave funny around the footer.

--- a/src/search/search.css
+++ b/src/search/search.css
@@ -24,4 +24,10 @@
 
 .leaderboard {
     width: 100%;
+    height: 460px;
+    overflow-y: auto;
+}
+
+.main-content {
+    padding-bottom: 40px;
 }
